# PYTHON

./: .gitignore  .pre-commit-config.yaml  MacGuard.py  README.md  Test_bojowy.py  check_torch_env.py  com.system.guard.plist  common_utils.py  debug_ruff.py  geode.py  gra_info.py  kostkarubika.py  pamiecPlikow.txt  pyproject.toml  settings.json  setup_vscode.sh  tasks_for_leetcode.py  tekstowy.txt  xd_data.xlsx
a03_Projekt_Glowny/MyTorch/: .gitignore  README.md  __init__.py  common_utils.py  config.json  core.py  main.py  pyproject.toml  pytest.ini  settings.json  types.py  types.pyi
a03_Projekt_Glowny/MyTorch/data/: __init__.py  base.py  batch.py  cache.py  dataset.py  downloader.py  protocols.py
a03_Projekt_Glowny/MyTorch/features/: __init__.py  edges.py  extractor.py  hog.py  interfaces.py
a03_Projekt_Glowny/MyTorch/nn/: __init__.py  interfaces.py  model.py
a03_Projekt_Glowny/MyTorch/nn/layers/: __init__.py  activation.py  conv_layer.py  dropout.py  flatten.py  interfaces.py  linear.py
a03_Projekt_Glowny/MyTorch/preprocessing/: __init__.py  augmentation.py  base.py  conversion.py  convolution.py  decorators.py  geometry.py  grayscale.py  io_image.py  normalization.py  pipeline.py  pooling.py  protocols.py  thresholding.py
a03_Projekt_Glowny/MyTorch/tests/: AUTO_TESTS.py  CREATE_TREE.py
a03_Projekt_Glowny/MyTorch/tests/test_data/: conftest.py  test_batch.py  test_cache.py  test_dataset.py  test_downloader.py
a03_Projekt_Glowny/MyTorch/tests/test_features/: test_edges.py  test_extractor.py  test_hog.py
a03_Projekt_Glowny/MyTorch/tests/test_nn/: test_model.py  test_tensor.py
a03_Projekt_Glowny/MyTorch/tests/test_preprocessing/: test_augmentation.py  test_conversion.py  test_convolution.py  test_decorators.py  test_geometry.py  test_grayscale.py  test_io_image.py  test_normalization.py  test_pipeline.py  test_pooling.py  test_thresholding.py
a03_Projekt_Glowny/MyTorch/tests/test_training/: test_loss.py  test_optimizer.py  test_trainer.py
a03_Projekt_Glowny/MyTorch/training/: __init__.py  interfaces.py  loss.py  optimizer.py  trainer.py
a03_Projekt_Glowny/PyTorch/: README.md  __init__.py  common_utils.py  config.json  core.py  main.py  pyproject.toml  pytest.ini  settings.json  test.py  test_pipeline.py  types.py  types.pyi
a03_Projekt_Glowny/PyTorch/data/: __init__.py  batch.py  cache.py  common.py  dataset.py  downloader.py  metadata.json  types.py
a03_Projekt_Glowny/PyTorch/features/: __init__.py  edges.py  extractor.py  hog.py
a03_Projekt_Glowny/PyTorch/nn/: __init__.py  common.py  model.py  tensor.py
a03_Projekt_Glowny/PyTorch/nn/layers/: __init__.py  activation.py  base.py  conv_layer.py  dropout.py  flatten.py  linear.py
a03_Projekt_Glowny/PyTorch/preprocessing/: __init__.py  augmentation.py  conversion.py  convolution.py  decorators.py  geometry.py  grayscale.py  io_image.py  normalization.py  pipeline.py  pooling.py  test_pipeline.py  thresholding.py  utils.py
a03_Projekt_Glowny/PyTorch/tests/test_nn/: test_tensor.py
a03_Projekt_Glowny/PyTorch/tests/test_preprocessing/: __init__.py  conftest.py  test_augmentation.py  (+10 more)
a03_Projekt_Glowny/PyTorch/training/: __init__.py  loss.py  optimizer.py  trainer.py
(+128 files in other folders)
